Update SECURITY TOKEN
